[package]
name = "data-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14"
lambda_runtime = "0.14"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenvy = "0.15"
lazy_static = "1"
# RabbitMQ consumer
lapin = "2"
# Excel parsing (for non-PDF file type text extraction)
calamine = "0.26"
# Base64 encoding for Gemini inline data fallback
base64 = "0.22"
bytes = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
